# 166-Final-Project

./: .gitignore  README.md  pyproject.toml  requirements.txt
project/: PIPELINE_REPORT.md  README_PIPELINE.md  main.py  paper.tex
project/data/: DatasetQuinonesFiltered.csv  DatasetQuinonesFilteredTest.csv  DatasetQuinonesFilteredTrain.csv
project/results/: descriptor_family_performance.csv  error_by_structure.csv  feature_ranking.csv  model_comparison.csv  results_with_ci.csv  screening_results.csv  top20_candidates.csv
scripts/: run_experiment.sh
src/redox_screening/: __init__.py  data.py  features.py  models.py  screening.py  train.py
