[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "redox-screening"
version = "0.1.0"
description = "Machine learning screening of organic cathode molecules via redox potential prediction"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.4",
  "matplotlib>=3.8",
  "seaborn>=0.13"
]

[project.optional-dependencies]
smiles = ["rdkit>=2023.9.1"]

[project.scripts]
redox-train = "redox_screening.train:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
